# uwp-js-test

./: .gitignore  CMakeLists.txt  manifest.json  package.json  tsconfig.json
lib/winjs-4.4.1/js/: base.js  base.min.js  base.min.js.map  intrinsics.js  intrinsics.min.js  intrinsics.min.js.map  tv.js  ui.js  ui.min.js  ui.min.js.map
lib/winjs-4.4.1/js/en-US/: ui.strings.js
src/: config.ts  index.html  main.ts
src/module/winSearch/: winSearch.cpp
src/module/winSearch2/: main.cpp
